# SafetyGuardian

./: .gitignore  Config.plist.template  Info.plist  README.md  run_tests.sh
Assets.xcassets/AppIcon.appiconset/: Contents.json
SafetyGuardian.xcodeproj/: project.pbxproj
Sources/SafetyGuardian/: AudioPlayer.swift  CameraManager.swift  Configuration.swift  ContentView.swift  CosmosAPI.swift  Models.swift  SafetyGuardianApp.swift  TTSManager.swift
Tests/SafetyGuardianTests/: CameraManagerTests.swift  ConfigurationTests.swift  ModelsTests.swift
app/: Config.plist.template  Info.plist  start_safetyguardian_server.sh
app/SafetyGuardian.xcodeproj/: project.pbxproj
app/Sources/SafetyGuardian/: CameraManager.swift  Models.swift
app/Tests/SafetyGuardianTests/: AudioPlayerTests.swift  CosmosAPITests.swift  IntegrationTests.swift  TTSManagerTests.swift
data-curation/: analysis_queue.json  comments.json  frame_analyzer.py  review_log.md  sync-cosmos-videos.sh  training_data.jsonl
inference/: VLLM_SETUP.md  pyproject.toml
sample-data/: 00B8_ice_patch.json  03B1_cone_warning.json  3A7A_puddle_deep.json  4D74_cyclist_fast.json  E900_clear_open.json
server/: .env.example  VLLM_SETUP.md  serve_finetuned_model.sh  stop_safetyguardian_server.sh
training/: TRAINING_PIPELINE.md  finetune_instructions.md  trl_sft_safety_guardian.py
