[project]
name = "safetyguardian-inference"
version = "1.0.0"
requires-python = ">=3.10"
dependencies = [
    "vllm==0.12.0",
    "transformers==4.57.1",
    "huggingface-hub==0.36.0",
    "accelerate==1.12.0",
    "safetensors==0.7.0",
    "peft",
    "python-dotenv==1.2.1",
]

[tool.uv]
# PyTorch with CUDA 12.8 (matches Nebius L40S instance)
extra-index-url = ["https://download.pytorch.org/whl/cu128"]
